# practice-fastapi-app

./: LICENSE  README.md  alembic.ini  database.py  main.py  pyproject.toml  settings.py
migrations/: env.py
migrations/versions/: 02878f6430e4_purchase_list_update.py  057b66d06ed4_init.py  170740359108_update_field_fix.py  56bced70819d_add_category_id.py  63c757c5ad2f_purchase_list_add.py  7ab49770a384_add_purchases_sellers_update_product.py  dd928743cc6f_add_update_field_to_purchase_model.py
services/: __init__.py  services.md
services/categories/: categories.py  models.py  routes.py  schemas.py
services/products/: models.py  products.py  routes.py  schemas.py
services/purchases/: models.py  routes.py  schemas.py
services/sellers/: models.py  routes.py  schemas.py
tests/: conftest.py  fixtures.py  test_database.py  test_endpoints.py
